[gd_scene load_steps=13 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/White/1x/audioOn.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/blue_button04.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/blue_button03.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/grey_button03.png" type="Texture" id=8]
[ext_resource path="res://assets/icons/White/1x/cross.png" type="Texture" id=9]
[ext_resource path="res://assets/icons/White/1x/crossHover.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/ARDARLING.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 11 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogContainer" type="CenterContainer" parent="Control"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetTimeDialog" type="ConfirmationDialog" parent="Control/DialogContainer"]
margin_left = 279.0
margin_top = 249.0
margin_right = 745.0
margin_bottom = 351.0
window_title = ""
dialog_text = "do you really want to reset?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
margin_right = 1024.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/CenterContainer"]
margin_left = 323.0
margin_top = 19.0
margin_right = 701.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 3 )
text = "REVERSE GOLF"

[node name="ActivateMusic" type="CheckBox" parent="Control"]
margin_left = 48.0
margin_top = 556.0
margin_right = 436.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
pressed = true
text = "MUSIC"
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioOn" type="Sprite" parent="Control/ActivateMusic"]
position = Vector2( -15, 20 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="ControlContainer" type="CenterContainer" parent="Control"]
margin_top = 368.0
margin_right = 1024.0
margin_bottom = 472.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/ControlContainer"]
margin_left = 249.0
margin_top = 18.0
margin_right = 774.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0.160784, 0.764706, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "ROTATE THE GOLF COURSE WITH: W, A, S, D
ROTATE CAMERA WITH MOUSE"
align = 1
valign = 1

[node name="LevelContainer" type="CenterContainer" parent="Control"]
margin_top = 140.0
margin_right = 1024.0
margin_bottom = 330.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Control/LevelContainer"]
margin_left = 252.0
margin_right = 772.0
margin_bottom = 190.0
custom_constants/vseparation = 20
custom_constants/hseparation = 50
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButton1" type="TextureButton" parent="Control/LevelContainer/GridContainer"]
margin_right = 190.0
margin_bottom = 50.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="Control/LevelContainer/GridContainer/LevelButton1"]
margin_right = 190.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0.211765, 0.211765, 0.211765, 1 )
text = "LEVEL 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTimeLabel1" type="Label" parent="Control/LevelContainer/GridContainer"]
margin_left = 240.0
margin_top = 7.0
margin_right = 420.0
margin_bottom = 43.0
text = "no time yet"

[node name="DeleteTimeButton1" type="TextureButton" parent="Control/LevelContainer/GridContainer"]
margin_left = 470.0
margin_right = 520.0
margin_bottom = 50.0
hint_tooltip = "reset time"
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )

[node name="LevelButton2" type="TextureButton" parent="Control/LevelContainer/GridContainer"]
margin_top = 70.0
margin_right = 190.0
margin_bottom = 120.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Label2" type="Label" parent="Control/LevelContainer/GridContainer/LevelButton2"]
margin_right = 190.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0.211765, 0.211765, 0.211765, 1 )
text = "LEVEL 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTimeLabel2" type="Label" parent="Control/LevelContainer/GridContainer"]
margin_left = 240.0
margin_top = 77.0
margin_right = 420.0
margin_bottom = 113.0
text = "no time yet"

[node name="DeleteTimeButton2" type="TextureButton" parent="Control/LevelContainer/GridContainer"]
margin_left = 470.0
margin_top = 70.0
margin_right = 520.0
margin_bottom = 120.0
hint_tooltip = "reset time"
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )

[node name="LevelButton3" type="TextureButton" parent="Control/LevelContainer/GridContainer"]
margin_top = 140.0
margin_right = 190.0
margin_bottom = 190.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Label3" type="Label" parent="Control/LevelContainer/GridContainer/LevelButton3"]
margin_right = 190.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0.211765, 0.211765, 0.211765, 1 )
text = "LEVEL 3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTimeLabel3" type="Label" parent="Control/LevelContainer/GridContainer"]
margin_left = 240.0
margin_top = 147.0
margin_right = 420.0
margin_bottom = 183.0
text = "no time yet"

[node name="DeleteTimeButton3" type="TextureButton" parent="Control/LevelContainer/GridContainer"]
margin_left = 470.0
margin_top = 140.0
margin_right = 520.0
margin_bottom = 190.0
hint_tooltip = "reset time"
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )

[node name="Label" type="Label" parent="Control"]
margin_left = 548.0
margin_top = 556.0
margin_right = 1007.0
margin_bottom = 588.0
custom_fonts/font = SubResource( 1 )
text = "TWITCH.TV/VOJAY"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBackground" type="ColorRect" parent="Control"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.666667 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="confirmed" from="Control/DialogContainer/ResetTimeDialog" to="." method="_on_ResetTimeDialog_confirmed"]
[connection signal="toggled" from="Control/ActivateMusic" to="." method="_on_ActivateMusic_toggled"]
[connection signal="pressed" from="Control/LevelContainer/GridContainer/LevelButton1" to="." method="_on_LevelButton1_pressed"]
[connection signal="pressed" from="Control/LevelContainer/GridContainer/DeleteTimeButton1" to="." method="_on_DeleteTimeButton1_pressed"]
[connection signal="pressed" from="Control/LevelContainer/GridContainer/LevelButton2" to="." method="_on_LevelButton2_pressed"]
[connection signal="pressed" from="Control/LevelContainer/GridContainer/DeleteTimeButton2" to="." method="_on_DeleteTimeButton2_pressed"]
[connection signal="pressed" from="Control/LevelContainer/GridContainer/LevelButton3" to="." method="_on_LevelButton3_pressed"]
[connection signal="pressed" from="Control/LevelContainer/GridContainer/DeleteTimeButton3" to="." method="_on_DeleteTimeButton3_pressed"]
